--- a/webtoapk-electron/src/renderer/index.html
+++ b/webtoapk-electron/src/renderer/index.html
@@ -77,6 +77,10 @@
                 <button id="nextStep">Next</button>
             </div>
         </main>
+
+        <footer class="app-footer">
+            <div class="footer-branding">powered by <a href="#" id="brelinxLink">brelinx</a></div>
+        </footer>
     </div>
 
     <script src="app.js"></script>
